# MiSTer_Grandma_Launcher

./: Cargo.toml  LICENSE  Makefile  README.md  deploy.sh  games.json.example  install.sh
.cargo/: config.toml
assets/fonts/: LICENSE
crates/grandma-admin/: Cargo.toml
crates/grandma-admin/src/: main.rs
crates/grandma-admin/src/web/: index.html
crates/grandma-common/: Cargo.toml
crates/grandma-common/src/: atomic.rs  config.rs  lib.rs  paths.rs
crates/grandma-launcher/: Cargo.toml
crates/grandma-launcher/src/: framebuf.rs  input.rs  main.rs  render.rs
crates/grandma-splash/: Cargo.toml
crates/grandma-splash/src/: main.rs
crates/grandma-supervisor/: Cargo.toml
crates/grandma-supervisor/src/: main.rs
mister_scripts/: admin-start.sh  admin-stop.sh  install.sh  uninstall.sh
