[workspace]
resolver = "2"
members = [
    "crates/grandma-common",
    "crates/grandma-supervisor",
    "crates/grandma-splash",
    "crates/grandma-launcher",
    "crates/grandma-admin",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"
file-rotate = "0.7"
